Making some changes to the layout, structure and styling
- reusing the code to read a post front matter
- adding ids to headings for linking them
- different styling of anchors in the posts
- frontmatter has new fields: publishedAt, lastUpdatedAt, changelist
- initial listing is sorted by the date of publishing
- dates are not parsed as Date object by yaml parser. This prevents serialization erros. The parsing happens in our code now

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,10 +1,18 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
 }
 @layer components {
+  .markdown-content a {
+    @apply no-underline text-teal-700 bg-gray-200 p-1;
+  }
+  .markdown-content a:hover {
+    @apply underline;
+  }
+
   .anchor {
     @apply no-underline text-black;
   }
@@ -15,5 +23,13 @@ body {
   ul,
   ol {
     @apply px-4;
+  }
+
+  .info {
+    @apply bg-red-100 p-3 m-3 rounded-2xl border border-solid border-red-400;
+  }
+
+  .info > a {
+    @apply bg-transparent;
   }
 }
